--- a/index.html.html
+++ b/index.html.html
@@ -18,7 +18,7 @@
     <h3><a href="./public/birthday invite.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/josiah      birthday- invite.png" height="500" alt="a birthday cake"/>
     <hr>
-    <h3><a href="./public/about.html">About me</a><a href="./public/contact.html">Contact me</a></h3>
+    <h3><a href="./public/contact.html">About me Contact me</a></h3>
 </body>
 </html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
